Доработана функциональность по техническому заданию спринта 2