@@ -1,7 +1,8 @@
 import manager.InMemoryHistoryManager;
-import manager.MockTaskManager;
 import manager.TaskManager;
+import model.Task;
 import org.junit.jupiter.api.Test;
+
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -11,38 +12,39 @@ class InMemoryHistoryManagerTest {
     @Test
     public void testGetHistory() {
         InMemoryHistoryManager manager = new InMemoryHistoryManager();
-        TaskManager task1 = new MockTaskManager(1);
-        TaskManager task2 = new MockTaskManager(2);
+        Task task1 = new Task("Task 1", "Description 1");
+        Task task2 = new Task("Task 2", "Description 2");
 
         manager.addTask(task1);
         manager.addTask(task2);
 
         List<TaskManager> history = manager.getHistory();
         assertEquals(2, history.size());
-        assertEquals(task1, history.get(0));
-        assertEquals(task2, history.get(1));
+        assertInstanceOf(Task.class, history.get(0));
+        assertInstanceOf(Task.class, history.get(1));
     }
 
     @Test
     public void testAddTask() {
         InMemoryHistoryManager manager = new InMemoryHistoryManager();
-        TaskManager task1 = new MockTaskManager(1);
-        TaskManager task2 = new MockTaskManager(1); // Same ID as task1
+        Task task1 = new Task("Task 1", "Description 1");
+        Task task2 = new Task("Task 2", "Description 2");
 
         manager.addTask(task1);
         manager.addTask(task2);
 
         List<TaskManager> history = manager.getHistory();
-        assertEquals(1, history.size()); // Only the latest task should be present
-        assertEquals(task2, history.getFirst());
+        assertEquals(2, history.size());
+        assertSame(task1, history.get(0));
+        assertSame(task2, history.get(1));
     }
 
     @Test
     public void testRemoveNode() {
         InMemoryHistoryManager manager = new InMemoryHistoryManager();
-        TaskManager task1 = new MockTaskManager(1);
-        TaskManager task2 = new MockTaskManager(2);
-        TaskManager task3 = new MockTaskManager(3);
+        Task task1 = new Task("Task 1", "Description 1");
+        Task task2 = new Task("Task 2", "Description 2");
+        Task task3 = new Task("Task 3", "Description 3");
 
         manager.addTask(task1);
         manager.addTask(task2);
@@ -52,8 +54,8 @@ class InMemoryHistoryManagerTest {
 
         List<TaskManager> history = manager.getHistory();
         assertEquals(2, history.size());
-        assertEquals(task1, history.get(0));
-        assertEquals(task3, history.get(1));
-        assertNull(manager.nodesById.get(2)); // Ensure task2 is removed from the map
+        assertSame(task1, history.get(0));
+        assertSame(task3, history.get(1));
+        assertNull(manager.nodesById.get(2));
     }
 }
